solved vue template visible before app is loaded

--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,7 @@
+[v-cloak] {
+  display:none;
+}
+
 @media (prefers-color-scheme: dark) {
     body   { background:  #333; color: white; }
     input   { background-color:  #111; color: white; }
